--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 /* Style for header */
 
+body {
+    background-image: url("purplebg.jpg");
+}
+
 header {
-    background-color: darkblue;
+    background-color: rgb(109, 0, 139);
     color: #fff;
     text-align: center;
     padding: 20px;
@@ -42,7 +46,72 @@ main {
 
 footer {
     text-align: center;
-    background-color: darkblue;
+    background-color: rgb(109, 0, 139);
     color: #fff;
     padding: 10px;
 }
+
+form {
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    background-color: #ca99ff;
+}
+
+label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type"password"],
+textarea,
+select {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    box-sizing: border-box;
+}
+
+input[type="radio"],input[type="checkbox"] {
+    margin-right: 5px;
+}
+
+button[type="submit"],button[type="reset"] {
+    background-color: #aa00ff;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: grab;
+}
+
+button[type="submit"]:hover,
+button[type="reset"]:hover {
+    background-color: #b3b3ff;
+    color: #000;
+}
+
+div#kiri {
+    width: 48%;
+    float: left;
+    padding: 5px;
+    border-style: dashed;
+    background-color: lightgoldenrodyellow;
+}
+
+div#kanan {
+    width: 48%;
+    float: right;
+    padding: 5px;
+    border-style: dashed;
+    background-color: lightpink;
+}
+
+.clear {clear: both;}
